# xtal--math

./: .gitignore  CMakeLists.txt  FIXME.md  LICENSE.txt  README.md  TODO.hh  UNLICENSE.txt  conanfile.py
.conan2/profiles/: macOS
.github/workflows/: conan-create.yml  pages.yml
doxygen/: Doxyfile  index-header.html  index.sh
include/xtal/: _retail.ii  any.cc  any.hh
include/xtal--math/: all.cc  all.hh  all.hxx  any.cc  any.h  any.hh  any.hxx
include/xtal--math/arrange/: all.cc  all.hh  all.hxx  any.cc  any.hh  any.hxx  phason.cc  phason.hh
include/xtal--math/atom/: all.cc  all.hh  all.hxx  any.cc  any.hh  dot.cc  dot.hh  fadon.cc  fadon.hh  loop.cc  loop.hh  phason.cc  phason.hh  quason.cc  quason.hh
include/xtal--math/bond/: all.cc  all.hh  any.cc  any.hh  bit.cc  bit.hh  prime.cc  prime.hh
include/xtal--math/cell/: any.cc  any.hh
include/xtal--math/flow/: any.cc  any.hh
include/xtal--math/occur/: all.cc  all.hh  all.hxx  any.cc  any.hh  arity.hh  count.hh  dash.cc  dash.hh  dent.cc  dent.hh  indent.cc  indent.hh  index.hh  level.hh  limit.hh  mode.hh  order.hh  produce.cc  produce.hh
include/xtal--math/process/: all.cc  all.hh  all.hxx  any.cc  any.hh  any.hxx  aspect.cc  aspect.hh  attuned.hh  between.cc  between.hh  clamp.cc  clamp.hh  codeficient.cc  codeficient.hh  coefficient.cc  coefficient.hh  component.cc  component.hh  cross.cc  cross.hh  cut.cc  cut.hh  cutout.cc  cutout.hh  decompose.cc  decompose.hh  dilate.cc  dilate.hh  dilated.cc  (+74 more)
include/xtal-math/: all.cc  all.hh  any.cc  any.hh  etc.cc
test_package/: CMakeLists.txt  conanfile.py
(+459 files in other folders)
